# LispIM

./: .gitignore  API_TEST_RESULTS.md  BACKEND_API_SUMMARY.md  CLIENTS_EVALUATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_APP_LOGIN_FIX.md  DESKTOP_BACKEND_OPTIMIZATION_REPORT.md  DEVELOPMENT_REPORT.md  IMPLEMENTATION_REPORT.md  P0_OPTIMIZATION_REPORT.md  PHASE5_REPORT.md  PHASE6_SUMMARY.md  PHASE7_BROWSER_TEST.md  PHASE7_INTEGRATION.md  PHASE7_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QR_IMAGE_UPLOAD_IMPLEMENTATION.md  README.md  SCAN_QR_ADD_FRIEND.md  check-db-encoding.ps1  check-encoding.lisp  check-functions.lisp  check-gateway-syntax.lisp  check-parens.lisp  check-pg-encoding.ps1  check-session.lisp  check-start-gateway.lisp  check-tables.ps1  compile-test.lisp  create-user.lisp  docker-compose.yml  fix-gateway.py  fix-gateway.sh  fix-parens.lisp  fix-permissions.ps1  grant-all-permissions.ps1  grant-permissions.ps1  (+35 more)
.claude/: settings.json  settings.local.json
android-app/: ANDROID_CLIENT_SUMMARY.md  ANDROID_STUDIO_EMULATOR_SETUP.md  BUILD.md  BUILD_STATUS.md  DEVELOPMENT_STATUS.md  GRADLE_WRAPPER_FIX.md  INSTALL_ANDROID_STUDIO.md  QUICK_START.md  README.md  SERVER_CONFIG.md  XIAOYAO_SETUP.md  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts  start_emulator.bat
android-client/: README.md  build.gradle.kts  settings.gradle.kts
tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/src/: main.rs  websocket.rs
(+505 files in other folders)
