[package]
name = "lispim-desktop"
version = "0.1.0"
description = "LispIM Enterprise Desktop Client"
authors = ["LispIM Team"]
license = "MIT"
repository = "https://github.com/lispim/lispim"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "notification-all",
  "global-shortcut-all",
  "clipboard-all",
  "fs-all",
  "dialog-all",
  "http-all",
  "system-tray"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
thiserror = "1.0"
tokio-tungstenite = "0.21"
url = "2.5"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
